--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,56 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Mc02Blog</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
+	<title>Mc02Blog</title>
+	<%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+	<%= stylesheet_link_tag 'application', 'http://fonts.googleapis.com/css?family=Raleway:400,700' %>
+	<%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+	<%= csrf_meta_tags %>
 </head>
 <body>
 
-<%= yield %>
+	<div id="sidebar">
+		<div id="logo">
+			<%= link_to root_path do %>
+			<%= image_tag "logo.svg" %>
+			<% end %>
+		</div>
+
+		<ul>
+			<li class="category">Website</li>
+			<li><%= link_to "Blog", '#' %></li>
+			<li><%= link_to "About", '#' %></li>
+		</ul>
+
+		<ul>
+			<li class="category">Social</li>
+			<li><a href="https://twitter.com/foxlance">Twitter</a></li>
+			<li><a href="http://instagram.com/foxlance">Instagram</a></li>
+			<li><a href="https://github.com/foxlance">Github</a></li>
+			<li><a href="mailto:lancevincent@gmail.com">Email</a></li>
+		</ul>
+
+		<p class="sign_in"><%= link_to "Admin Login", '#' %></p>
+	</div>
+
+	<div id="main_content">
+		<div id="header">
+			<p>All Posts</p>
+			<p>About</p>
+			<%= link_to "Back to All Posts", root_path %>
+
+			<div class="buttons">
+				<button class="button"><%= link_to "New Post", '#' %></button>
+				<button class="button">Log Out</button>
+			</div>
+		</div>
+
+		<% flash.each do |name, msg| %>
+			<%= content_tag(:div, msg, class: "alert") %>
+		<% end %>
+
+		<%= yield %>
+	</div>
 
 </body>
 </html>
