--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
 
 		<ul>
 			<li class="category">Website</li>
-			<li><%= link_to "Blog", '#' %></li>
+			<li><%= link_to "Blog", root_path %></li>
 			<li><%= link_to "About", '#' %></li>
 		</ul>
 
@@ -40,7 +40,9 @@
 			<%= link_to "Back to All Posts", root_path %>
 
 			<div class="buttons">
-				<button class="button"><%= link_to "New Post", '#' %></button>
+				<%= link_to new_post_path do %>
+					<button class="button">New Post</button>
+				<% end %>
 				<button class="button">Log Out</button>
 			</div>
 		</div>
