--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,15 +1,17 @@
-<h1>Create New Post</h1>
+<div id="page_wrapper">
+	<h1>Create New Post</h1>
 
-<%= form_for :post, url: posts_path do |f| %>
-<div>	
-	<%= f.label :title %>
-	<%= f.text_field :title%>
+	<%= form_for :post, url: posts_path do |f| %>
+	<p>	
+		<%= f.label :title %><br>
+		<%= f.text_field :title%>
+	</p>
+	<p>
+		<%= f.label :body %><br>
+		<%= f.text_area :body%>
+	</p>
+	<p>
+		<%= f.submit 'Submit'%>
+	</p>
+	<% end %>
 </div>
-<div>
-	<%= f.label :body %>
-	<%= f.text_area :body%>
-</div>
-<div>
-	<%= f.submit 'Submit'%>
-</div>
-<% end %>
