--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,3 +1,4 @@
-<h1><%= @post.title %></h1>
-<small>Submitted <%= time_ago_in_words(@post.created_at) %> ago</small>
-<p><%= @post.body %></p>
+<div id="post_content"><h1 class="title"><%= @post.title %></h1>
+	<small class="date">Submitted <%= time_ago_in_words(@post.created_at) %> ago</small>
+	<p class="body"><%= @post.body %></p>
+</div>
