--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -9,7 +9,7 @@
 </div>
 <% end %>
 
-<%= form_for :post, url: posts_path do |f| %>
+<%= form_for @post do |f| %>
 <p>	
 	<%= f.label :title %><br>
 	<%= f.text_field :title%>
