--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,7 @@
 <div id="post_content"><h1 class="title"><%= @post.title %></h1>
-	<small class="date">Submitted <%= time_ago_in_words(@post.created_at) %> ago</small>
+	<small class="date">
+		Submitted <%= time_ago_in_words(@post.created_at) %> ago &nbsp; 
+		<%= link_to 'Edit', edit_post_path %>
+	</small>
 	<p class="body"><%= @post.body %></p>
 </div>
