--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -5,4 +5,12 @@
 		<%= link_to 'Destroy', post_path, method: :delete, data: {confirm: 'Are you sure you want to delete?'} %>
 	</small>
 	<p class="body"><%= @post.body %></p>
+
+	<div id="comments">
+		<h2><%= pluralize(@post.comments.count, 'Comment') %></h2>
+		<%= render @post.comments %>
+
+		<h3>Add a comment:</h3>
+		<%= render "comments/form" %>
+	</div>
 </div>
