--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -4,4 +4,7 @@
 		<p class="comment_body"><%= comment.body %></p>
 		<p class="comment_time"><%= time_ago_in_words(comment.created_at) %> ago</p>
 	</div>
+
+	<%= link_to 'Destroy', [comment.post, comment], method: :delete, class: 'button', data: {confirm: 'Are you sure?'} %>
+
 </div>
