--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,9 +35,13 @@
 
 	<div id="main_content">
 		<div id="header">
+			<% if current_page?(root_path) %>
 			<p>All Posts</p>
+			<% elsif current_page?(about_path) %>
 			<p>About</p>
+			<% else %>
 			<%= link_to "Back to All Posts", root_path %>
+			<% end %>
 
 			<div class="buttons">
 				<%= link_to new_post_path do %>
