--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,11 @@
 			<li><a href="mailto:lancevincent@gmail.com">Email</a></li>
 		</ul>
 
-		<p class="sign_in"><%= link_to "Admin Login", '#' %></p>
+		<% if ! user_signed_in? %>
+		<p class="sign_in">
+			<%= link_to "Admin Login", new_user_session_path %>
+		</p>
+		<% end %>
 	</div>
 
 	<div id="main_content">
@@ -42,13 +46,15 @@
 			<% else %>
 			<%= link_to "Back to All Posts", root_path %>
 			<% end %>
-
+			
+			<% if user_signed_in? %>
 			<div class="buttons">
 				<%= link_to new_post_path do %>
 					<button class="button">New Post</button>
 				<% end %>
 				<button class="button">Log Out</button>
 			</div>
+			<% end %>
 		</div>
 
 		<% flash.each do |name, msg| %>
