--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,6 @@
-<h1>Posts</h1>
-
-	<%= @posts.each do |p| %>
-		<h2><%= p.title %></h2>
-		<p><%= p.body %></p>
-	<% end %>
+<% @posts.each do |p| %>
+<div class="post_wrapper">
+	<h2 class="title"><%= link_to p.title, post_path(p) %></h2>
+	<p class="date"><%= time_ago_in_words(p.created_at) %></p>
+</div>
+<% end %>
