--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -6,3 +6,12 @@
 	<%= link_to 'Destroy', post_path(@post), method: :delete, data: {confirm: 'Are you sure?'} %>
 </p>
 <p><%= @post.body%></p>
+
+<br>
+<div id="comments">
+	<h2><%= pluralize(@post.comments.count, 'Comment') %></h2>
+	<%= render @post.comments %>
+
+	<h3>Add a comment:</h3>
+	<%= render 'comments/form' %>
+</div>
