--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
 		<ul>
 			<li class="category">Website</li>
 			<li><%= link_to "Blog", root_path %></li>
-			<li><%= link_to "About", '#' %></li>
+			<li><%= link_to "About", about_path %></li>
 		</ul>
 
 		<ul>
@@ -37,7 +37,14 @@
 
 	<div id="main_content">
 		<div id="header">
+			<% if current_page?(root_path) %>
 			<p>All Posts</p>
+			<% elsif current_page?(about_path)%>
+			<p>About</p>
+			<% else %>
+			<p><%= link_to 'Back to All Post', root_path %></p>
+			<% end %>
+
 			
 			<% if user_signed_in? %>
 			<div class="buttons">
